updating html and css

--- a/examples/a.css
+++ b/examples/a.css
@@ -1,13 +1,19 @@
 div#content {
-	background-color: #f00;
 	font-family: Arial;
 	font-size: 28pt;
 }
 
 .qc {
 	border: 1px solid black;
+    padding: 20px;
+    margin: 20px;
 }
 
 .disp {
 	padding: 15px;
+}
+
+.qc.Instr {
+    
+    font-size: 32px
 }
