--- a/examples/a.css
+++ b/examples/a.css
@@ -4,6 +4,13 @@ div#content {
 	font-size: 28pt;
 }
 
+div.header {
+	background-color: #FF7272;
+	font-family: Arial;
+	font-size: 28pt;
+	border: 1px solid black;
+}
+
 .qc {
 	border: 1px solid black;
 }
